tests/type-errors/no_read_global_shadow_var.arl
archetype shadow_read_global_var_effect

entry exec () {
  effect {
    require(myvar = 0)
  }
}

specification {
  variable myvar : int = 1
}
